# cwrucutter_core

./: .gitignore  README  README.md  RunOnCutter.bash  cutter_autonomy_basic.launch  cutter_bringup_robot.launch  cutter_bringup_teleop.launch  cutter_log_playback.launch  cutter_setup_course.launch  cutter_setup_landmarks.launch  stack.xml
cutter_amcl/: CMakeLists.txt  landmarks.txt  mainpage.dox  manifest.xml  start_amcl.launch  start_amcl.launch.backup  start_amcl_lidar.launch  start_amcl_new.launch
cutter_amcl/cfg/: cutter_amcl.cfg  cutter_amcl.cfgc
cutter_amcl/cfg/cpp/cutter_amcl/: amclConfig.h
cutter_amcl/docs/: amclConfig.dox  amclConfig.wikidoc  cutter_amclConfig-usage.dox
cutter_amcl/src/: cutter_amcl.cpp  cutter_amcl_lidar.cpp  cutter_amcl_new.cpp  landmark_map_service.py  landmark_map_service_subscriber.py
cutter_amcl/src/cutter_amcl/cfg/: amclConfig.py
cutter_amcl/src/pf/: pf.c
cutter_amcl/src/sensors/: amcl_beacon.cpp  amcl_beacon.h  amcl_gps.cpp  amcl_gps.h  amcl_laser.cpp  amcl_laser.h
cutter_arduino/: mainpage.dox  manifest.xml
cutter_arduino/msg/: Analog_Rangefinder.msg  ArduGPS.msg  ArduImu.msg  Potentiometer.msg
cutter_bot_drivers/: CMakeLists.txt  mainpage.dox  manifest.xml  start_arduimu.launch  start_christa.launch  start_crio.launch  start_lidar.launch  start_novatel.launch  start_robot.launch  start_whiskers.launch
cutter_bot_drivers/include/: GPS_conversion.h
cutter_bot_drivers/launch/: gps_conversion.launch  gps_conversion_AprilTesting.launch
cutter_bot_drivers/src/: arduimu_driver.py  cmd_vel_translate.py  (+3 more)
cutter_localization/: CMakeLists.txt  README  lidar_localization.launch  mainpage.dox  manifest.xml  odometry_encoders.launch  start_localization.launch
cutter_localization/include/: GPS_conversion.h
cutter_localization/launch/: amcl_localization.launch  odometry_encoders.launch  slip_detect.launch  start_surveying.launch
cutter_localization/src/: amcl_init.cpp  amcl_init_once.cpp  amcl_to_state.cpp  cutter_odometry.cpp  filter_test.cpp  gps_survey.py  lidar_make_snow.py  localization_dgps.cpp  localization_evaluation.cpp  sim_localization.cpp  sim_localization.py  slip_detect.cpp
cutter_localization/survey/: survey.txt
cutter_msgs/: mainpage.dox  manifest.xml
cutter_planning/: CMakeLists.txt  README  backup-waypoints.tgz  mainpage.dox  manifest.xml  start_planning.launch  start_planning_con1.launch  start_planning_con2.launch
cutter_sim_stage/: cutter_sim_amcl1.launch  cutter_sim_amcl2.launch  cutter_sim_basic.launch  cutter_sim_basic1.launch  cutter_sim_con1.launch  cutter_sim_con2.launch  cutter_sim_headless.launch  cutter_sim_lidar1.launch  mainpage.dox  manifest.xml
cutter_slip_detect/: CMakeLists.txt  mainpage.dox  manifest.xml  start_simple_slip_detect.launch  start_slip_detect.launch
cutter_steering/: CMakeLists.txt  README  demopoints.txt  mainpage.dox  manifest.xml  start_steering.launch  start_wallfollowing.launch
cutter_survey/: mainpage.dox  manifest.xml  start_surveying.launch  start_transform_con1.launch  start_transform_con2.launch
cutter_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml  start_teleop.launch
(+74 files in other folders)
